@@ -86,6 +86,7 @@ Changelog
  * Extract filtering code from ReportView to generic IndexView (Sage Abdullah)
  * Retain other query params in header search behaviour (Sage Abdullah)
  * Remove `is_parent` kwarg in various page button hooks as this approach is no longer required (Paarth Agarwal)
+ * Improve security of redirect imports by adding a file hash (signature) check for so that any tampering of file contents between requests will throw a `BadSignature` error (Jaap Roes)
  * Fix: Typo in `ResumeWorkflowActionFormatter` message (Stefan Hammer)
  * Fix: Throw a meaningful error when saving an image to an unrecognised image format (Christian Franke)
  * Fix: Remove extra padding for headers with breadcrumbs on mobile viewport (Steven Steinwand)
@@ -116,6 +117,7 @@ Changelog
  * Fix: Ensure ModelAdmin single selection lists show correctly with Django 4.0 form template changes (Coen van der Kamp)
  * Fix: Ensure icons within help blocks have accessible contrasting colours, and links have a darker colour plus underline to indicate they are links (Paarth Agarwal)
  * Fix: Ensure consistent sidebar icon position whether expanded or collapsed (Scott Cranfill)
+ * Fix: Avoid redirects import error if the file had lots of columns (Jaap Roes)
 
 
 3.0.1 (16.06.2022)
